--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,43 @@
+<!-- filepath: /home/shanhaider23/projects/simply-connect/simplesocial/templates/base.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-   
     <title>Simply Connect</title>
-   
+    {% load static %}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
+    <link rel="stylesheet" href="{% static 'simplesocial/css/master.css' %}">
 </head>
 <body>
-    <header>
-        <h1>Nav</h1>
-    </header>
-    <main>
+    <nav class="navbar mynav" role="navigation" id="navbar">
+        <div class="container">
+            <a class="navbar-brand mynav" href="{% url 'home' %}">Star Social</a>
+            <ul class="nav navbar-nav navbar-right">
+                {% if user.is_authenticated %}
+                    {% comment %} <li><a href="{% url 'posts:create' %}" class="btn btn-simple">Post</a></li>
+                    <li><a href="{% url 'groups:all' %}" class="btn btn-simple">Groups</a></li>
+                    <li><a href="{% url 'groups:create' %}" class="btn btn-simple">Create Group</a></li>
+                    <li><a href="{% url 'accounts:logout' %}" class="btn btn-simple">Log out</a></li> {% endcomment %}
+                {% else %}
+                    <li><a href="{% url 'accounts:login' %}" class="btn btn-simple">Log in</a></li>
+                    <li><a href="{% url 'accounts:signup' %}" class="btn btn-simple">Sign up</a></li>
+                {% endif %}
+            </ul>
+        </div>
+    </nav>
+    <div class="container mycontent">
         {% block content %}
         {% endblock %}
-    </main>
-    <footer>
-        <p>&copy; 2025 Simply Connect. All rights reserved.</p>
-    </footer>
+    </div>
+   
 </body>
 </html>
