--- a/templates/base.html
+++ b/templates/base.html
@@ -23,10 +23,10 @@
             <a class="navbar-brand mynav" href="{% url 'home' %}">Star Social</a>
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
-                    {% comment %} <li><a href="{% url 'posts:create' %}" class="btn btn-simple">Post</a></li>
+                    <li><a href="{% url 'posts:create' %}" class="btn btn-simple">Post</a></li>
                     <li><a href="{% url 'groups:all' %}" class="btn btn-simple">Groups</a></li>
                     <li><a href="{% url 'groups:create' %}" class="btn btn-simple">Create Group</a></li>
-                    <li><a href="{% url 'accounts:logout' %}" class="btn btn-simple">Log out</a></li> {% endcomment %}
+                    <li><a href="{% url 'accounts:logout' %}" class="btn btn-simple">Log out</a></li> 
                 {% else %}
                     <li><a href="{% url 'accounts:login' %}" class="btn btn-simple">Log in</a></li>
                     <li><a href="{% url 'accounts:signup' %}" class="btn btn-simple">Sign up</a></li>
@@ -38,6 +38,8 @@
         {% block content %}
         {% endblock %}
     </div>
-   
+    <footer>
+        <p>&copy; 2025 Simply Connect. All rights reserved.</p>
+    </footer>
 </body>
 </html>
