--- a/templates/base.html
+++ b/templates/base.html
@@ -38,8 +38,7 @@
         {% block content %}
         {% endblock %}
     </div>
-    <footer>
-        <p>&copy; 2025 Simply Connect. All rights reserved.</p>
-    </footer>
+   <canvas id="canvas"></canvas>
 </body>
+<script src="{% static "simplesocial/js/master.js"%}" type="text/javascript" ></script>
 </html>
